--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -23,7 +23,7 @@
                     <input type="text" name="sample_ref" class="form-control search-input" id="sample_ref" />
                 </div>
                 <div class="form-group col-xs-12 col-sm-3">
-                    <input class="btn btn-success" id="submit_sample_btn" name="commit" type="submit" value="Dispatch">
+                    <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Dispatch">
                 </div>
             </form>
         </div>
@@ -49,7 +49,7 @@
                     <input type="text" name="sample_ref" class="form-control search-input" id="sample_ref" />
                 </div>
                 <div class="form-group col-xs-12 col-sm-3">
-                    <input class="btn btn-success" id="submit_sample_btn" name="commit" type="submit" value="Receive">
+                    <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Receive">
                 </div>
             </form>
         </div>
@@ -100,7 +100,7 @@
                             {{ results_form.ph }}
                         </div>
                         <div class="form-group col-xs-6 col-sm-2">
-                            <input class="btn btn-success results_btn" id="submit_sample_btn" name="commit" type="submit" value="Submit Results">
+                            <input class="btn btn-primary results_btn" id="submit_sample_btn" name="commit" type="submit" value="Submit Results">
                         </div>
                     </div>
                 </div>
@@ -127,64 +127,68 @@
             <form method="get">
                 <!-- if left out completly form is not styled, if not commented out results form is rendered twice  {{ filter.form|as_bootstrap }} -->
                 <div class="row">
-                    <div class="form-group col-xs-7 col-sm-3">
+                    <div class="form-group col-xs-6 col-sm-3 col-md-2">
                         {{ filter.form.sample_ref.label_tag }}
                         {{ filter.form.sample_ref }}
 
                     </div>
-                    <div class="form-group col-xs-7 col-sm-3">
+                    <div class="form-group col-xs-6 col-sm-3 col-md-2">
                         {{ filter.form.status.label_tag }}
                         {{ filter.form.status }}
 
                     </div>
-                    <div class="form-group col-xs-7 col-sm-3">
+                    <div class="form-group col-xs-6 col-sm-3 col-md-2">
                         {{ filter.form.ordered_by.label_tag }}
                         {{ filter.form.ordered_by }}
                     </div>
-                    <div class="form-group col-xs-7 col-sm-3">
+                    <div class="form-group col-xs-6 col-sm-3 col-md-2">
                         <button class="btn btn-primary filter_btn" type="submit"><i class="fas fa-search"></i> Filter</button>
                     </div>
                 </div>
 
 
             </form>
-            <div class="row sample_list_table">
-                <table class="col-xs-12">
-                    <tr>
-                        <th>Sample Ref.</th>
-                        <th>Status</th>
-                        <th>Details</th>
-                        <th>Ordered By</th>
-                        <th class="visible-md visible-lg">Ordered Date</th>
-                        <th class="visible-md visible-lg">Dispatched Date</th>
-                        <th class="visible-md visible-lg">Submitted Date</th>
-                        <th class="visible-md visible-lg">Received Date</th>
-                        <th class="visible-md visible-lg">Tested Date</th>
-                    </tr>
-                    {% for sample in samples %}
-                    <tr>
-                        <td>{{ sample.sample_ref }}</td>
-                        <td>{{ sample.status }}</td>
-                        <td>
-                            {% if sample.status == "Ordered" or sample.status == "Dispatched" %}
-                            {% else %}
-                            <form action="{% url 'viewreport' sample.id %}" method="post">
-                                {% csrf_token %}
-                                <input class="btn btn-success" type="submit" value="View">
-                            </form>
-                            {% endif %}
-                        </td>
-                        <td>{{ sample.ordered_by }}</td>
-                        <td class="visible-md visible-lg">{{ sample.ordered_date.date }}</td>
-                        <td class="visible-md visible-lg">{{ sample.dispatched_date.date  }}</td>
-                        <td class="visible-md visible-lg">{{ sample.submit_date.date  }}</td>
-                        <td class="visible-md visible-lg">{{ sample.received_date.date  }}</td>
-                        <td class="visible-md visible-lg">{{ sample.tested_date.date  }}</td>
-
-                    </tr>
-                    {% endfor %}
-
-                </table>
+            <div class="row">
+                <div class="sample_list_table">
+                    <table class="col-xs-12 sample_table">
+                        <thead>
+                            <tr>
+                                <th>Sample Ref.</th>
+                                <th>Status</th>
+                                <th>View Details</th>
+                                <th>Ordered By</th>
+                                <th>Ordered Date</th>
+                                <th>Dispatched Date</th>
+                                <th>Submitted Date</th>
+                                <th>Received Date</th>
+                                <th>Tested Date</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for sample in samples %}
+                            <tr>
+                                <td>{{ sample.sample_ref }}</td>
+                                <td>{{ sample.status }}</td>
+                                <td>
+                                    {% if sample.status == "Ordered" or sample.status == "Dispatched" %}
+                                    {% else %}
+                                    <form action="{% url 'viewreport' sample.id %}" method="post">
+                                        {% csrf_token %}
+                                        <input class="btn btn-primary row_btn " type="submit" value="View">
+                                    </form>
+                                    {% endif %}
+                                </td>
+                                <td>{{ sample.ordered_by }}</td>
+                                <td>{{ sample.ordered_date.date }}</td>
+                                <td>{{ sample.dispatched_date.date  }}</td>
+                                <td>{{ sample.submit_date.date  }}</td>
+                                <td>{{ sample.received_date.date  }}</td>
+                                <td>{{ sample.tested_date.date  }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
