--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,14 +1,132 @@
+/*--------------------------------------------------------------Base/Global Styling*/
+
 html, body {
     height: 1vh;
 }
 
+body {
+    font-family: Arial;
+    padding-top: 80px;
+    z-index: 2;
+    background-color: #f9f9f9;
+}
 
+
+.main_container {
+    margin-top: 0px;
+    min-height: calc(100vh - 140px);
+}
+
+h1, h2, h3, h4 {
+    color: #40ae49
+}
+
+
+nav {
+    color: #5e0909;
+}
+
+.navbar {
+    border: none;
+    padding-top: 8px;
+}
+
+
+.navbar-default .navbar-brand {
+    color: #282828;
+    margin-bottom: 10px;
+}
+
+.logo_leaf {
+    color: #328008;
+}
+
+.navbar-default .navbar-brand:hover {
+    color: #328008;
+}
+
+.header_contact {
+    height: 15px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    color: #328008;
+    display: block;
+    text-align: right;
+}
+
+    .header_contact > a {
+        color: #328008;
+    }
+
+
+.navbar-default .navbar-nav > li > a {
+    color: #282828;
+    font-family: 'Overpass', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+}
+
+    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+        color: #328008;
+        background-color: transparent;
+    }
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #328008;
+}
+
+.navbar-default .navbar-toggle {
+    border-color: #328008;
+    background-color: #328008;
+}
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border: none;
+}
+
+.navbar-collapse.in {
+    overflow-y: visible;
+    background-color: white;
+}
+
+.phone_link {
+    margin-left: 10px;
+}
+
+footer {
+    padding-top: 20px;
+    color: #A9A9A9;
+    position: relative;
+    bottom: 0px;
+    left: 0px;
+    text-align: center;
+    vertical-align: middle;
+    width: 100%;
+}
+
+.LinkedInLink {
+    color: #328008;
+}
+
+    .LinkedInLink:hover {
+        color: #328008;
+    }
+
+
+
+/*--------------------------------------------------------------Home Styling*/
 .home_bg {
     background-size: 1800px 100%;
     background-repeat: no-repeat;
     background-position: center top;
     background-attachment: fixed;
 }
+
+    .home_bg .navbar {
+        background-image: none;
+        background-color: transparent;
+    }
 
 .home_info {
     background-color: rgba(255, 255, 255, 0.75);
@@ -43,99 +161,7 @@ html, body {
         margin-left: 10%;
     }
 
-
-body {
-    font-family: Arial;
-    padding-top: 80px;
-    z-index: 2;
-    background-color: #f9f9f9;
-}
-
-
-.main_container {
-    margin-top: 0px;
-    min-height: calc(100vh - 140px);
-}
-
-nav {
-    color: #5e0909;
-}
-
-.navbar {
-    border: none;
-    padding-top:8px;
-}
-
-.home_bg .navbar {
-    background-image: none;
-    background-color: transparent;
-}
-
-
-.navbar-default .navbar-brand {
-    color: #282828;
-    margin-bottom: 10px;
-}
-
-.logo_leaf {
-    color: #328008;
-}
-
-.navbar-default .navbar-brand:hover {
-    color: #328008;
-}
-.header_contact {
-    height: 15px;
-    margin-right: 15px;
-    margin-bottom:5px;
-    color: #328008;
-    display: block;
-    text-align:right;
-}
-
-    .header_contact > a {
-        color: #328008;
-    }
-
-
-.navbar-default .navbar-nav > li > a {
-    color: #282828;
-    font-family: 'Overpass', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    color: #328008;
-    background-color: transparent;
-}
-
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-    background-color: #328008;
-
-}
-
-.navbar-default .navbar-toggle {
-    border-color: #328008;
-    background-color: #328008;
-}
-
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border:none;
-}
-
-.navbar-collapse.in {
-    overflow-y: visible;
-    background-color: white;
-}
-
-.phone_link{
-    margin-left:10px;
-}
-
-h1, h2, h3, h4 {
-    color: #40ae49
-}
+/*--------------------------------------------------------------Portal Styling*/
 
 .portal_section {
     margin-top: 20px;
@@ -153,33 +179,59 @@ h1, h2, h3, h4 {
     margin-top: 5px;
 }
 
-
-footer {
-    padding-top: 20px;
-    color: #A9A9A9;
-    position: relative;
-    bottom: 0px;
-    left: 0px;
+table, tr, td, th {
     text-align: center;
-    vertical-align: middle;
-    width: 100%;
 }
 
-.LinkedInLink  {
-    color: #328008;
+.row_btn {
+    padding: 3px 8px 3px 8px;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
 
-.LinkedInLink:hover {
-    color: #328008;
+.sample_table tr:nth-child(even) {
+    background: #d6eaf5
 }
 
-.icon-bar {
-    background-color: #fff;
+.sample_table tr:nth-child(odd) {
+    background: #FFF
 }
 
-.accountform {
-    padding-top: 20px;
+.section_title .fas {
+    border-radius: 50%;
+    border-style: solid;
+    font-size: medium;
+    padding: 2px;
 }
+
+.sample_list_wrapper {
+    position: relative;
+    overflow-x: scroll;
+}
+
+.sample_list_table {
+    max-height: 400px;
+    overflow: scroll;
+}
+
+.filter_btn, .results_btn {
+    margin-top: 25px;
+}
+
+.section_title .fas {
+    border-radius: 50%;
+    border-style: solid;
+    font-size: medium;
+    padding: 2px;
+}
+
+/*--------------------------------------------------------------Details Styling*/
+
+#useDeviceLoc {
+    margin-bottom: 5px;
+}
+
+/*--------------------------------------------------------------Report Styling*/
 
 .mymap_wrapper {
     height: 300px;
@@ -188,61 +240,6 @@ footer {
 
 #mymap {
     height: 100%;
-}
-
-
-.badge {
-    padding-left: 9px;
-    padding-right: 9px;
-    -webkit-border-radius: 9px;
-    -moz-border-radius: 9px;
-    border-radius: 9px;
-}
-
-.label-warning[href],
-.badge-warning[href] {
-    background-color: #c67605;
-}
-
-.product {
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    width: 150px;
-    height: 150px;
-    margin: 0 auto;
-}
-
-.product_name {
-    color: #40ae49;
-}
-.product_price {
-    color: #0084cc;
-    font-size: 31.25px;
-}
-
-caption p {
-    word-wrap: break-word;
-}
-
-.row.row-flex {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.panel-default {
-    border-color: transparent;
-    padding: 0 10px;
-}
-
-.panel-body {
-    height: 100%;
-    border: 1px solid #ddd;
-}
-
-.product_description {
-    min-height: 40px;
 }
 
 .very_low_result {
@@ -261,31 +258,93 @@ caption p {
     background-color: #99ff99;
 }
 
-table, tr, td, th {
-    text-align: center;
-}
-
-.section_title .fas {
-    border-radius: 50%;
-    border-style: solid;
-    font-size:medium;
-    padding: 2px;
-}
-
-table {
-    overflow: scroll;
-}
-
-#useDeviceLoc{
-    margin-bottom:5px;
-}
 
 
-.sample_list_table {
-    max-height: 400px;
-    overflow:scroll;
+
+/*--------------------------------------------------------------Product Styling*/
+
+
+.product_name {
+    color: #40ae49;
 }
 
-.filter_btn, .results_btn {
-    margin-top: 25px;
+.product_price {
+    color: #0084cc;
+    font-size: 31.25px;
 }
+
+caption p {
+    word-wrap: break-word;
+}
+
+.panel-default {
+    border-color: transparent;
+    padding: 0 10px;
+}
+
+.panel-body {
+    height: 100%;
+    border: 1px solid #ddd;
+}
+
+.product_description {
+    min-height: 40px;
+}
+
+.product {
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+
+
+
+.icon-bar {
+    background-color: #fff;
+}
+
+.accountform {
+    padding-top: 20px;
+}
+
+
+
+
+.badge {
+    padding-left: 9px;
+    padding-right: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+}
+
+.label-warning[href],
+.badge-warning[href] {
+    background-color: #c67605;
+}
+
+
+
+
+.row.row-flex {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+}
+
+
+
+
+
+
+
+
