--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -3,31 +3,54 @@
 {% block content %}
 <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4">
-        <h3>First time customer?</h3>
-        <form method="post" action="{% url 'register' %}" class="accountform">
-            <fieldset class="form-group">
-                <legend>Create a new account</legend>
-                <p>Already got an account? <a href="{% url 'login' %}">Sign In</a></p>
-                {% csrf_token %}
-                {{  registration_form | as_bootstrap }}
-                <button type="submit" class="btn btn-primary">Create account</button>
-            </fieldset>
-        </form>
+        <div class="row section_header">
+            <div class="col-xs-12">
+                <a data-toggle="collapse" href="#register_collapse" role="button" aria-expanded="true" aria-controls="#register_collapse">
+                    <h3 class="pull-left section_title">First time customer?</h3>
+                    <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
+                </a>
+            </div>
+        </div>
+        <div class="collapse register_collapse collapse_xs" id="register_collapse">
+                <form method="post" action="{% url 'register' %}" class="accountform">
+                    <fieldset class="form-group">
+                        <legend>Create a new account</legend>
+                        <p>Already got an account? <a href="{% url 'login' %}">Sign In</a></p>
+                        {% csrf_token %}
+                        {{  registration_form | as_bootstrap }}
+                        <button type="submit" class="btn btn-primary">Create account</button>
+                    </fieldset>
+                </form>
+        </div>
+
+
+
+
     </div>
 
     <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
-        <h3>Already Registered?</h3>
-        <form method="post" action="{% url 'login' %}?next={{ next }}" class="accountform">
-            <fieldset class="form-group">
-                <legend>Login</legend>
-                {% csrf_token %}
-                {{ user_form | as_bootstrap }}
+        <div class="row section_header">
+            <div class="col-xs-12">
+                <a data-toggle="collapse" href="#login_collapse" role="button" aria-expanded="true" aria-controls="#login_collapse">
+                    <h3 class="pull-left section_title">Already Registered?</h3>
+                    <h3 class="pull-right section_title"><i class="fas fa-minus"></i></h3>
+                </a>
+            </div>
+        </div>
 
-                <p><a href="{% url 'password_reset' %}">Forgot my password</a></p>
+        <div class="collapse login_collapse in" id="login_collapse">
+            <form method="post" action="{% url 'login' %}?next={{ next }}" class="accountform">
+                <fieldset class="form-group">
+                    <legend>Login</legend>
+                    {% csrf_token %}
+                    {{ user_form | as_bootstrap }}
 
-                <button type="submit" class="btn btn-primary">Login</button>
-            </fieldset>
-        </form>
+                    <p><a href="{% url 'password_reset' %}">Forgot my password</a></p>
+
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </fieldset>
+            </form>
+        </div>
     </div>
-</div>
+    </div>
 {% endblock %}
