--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,9 +6,9 @@ html, body {
 
 body {
     font-family: Arial;
-    padding-top: 80px;
+    margin-top: 100px;
     z-index: 2;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
 }
 
 
@@ -24,6 +24,7 @@ h1, h2, h3, h4 {
 
 nav {
     color: #5e0909;
+    height:100px;
 }
 
 .navbar {
@@ -58,6 +59,17 @@ nav {
         color: #328008;
     }
 
+.nav_container {
+    height:100px;
+}
+.navbar-default .navbar-nav {
+    position: relative;
+    bottom: 5px;
+}
+
+#navbar {
+    height: 100px;
+}
 
 .navbar-default .navbar-nav > li > a {
     color: #282828;
@@ -175,8 +187,6 @@ footer {
 
 .section_title {
     vertical-align: middle;
-    margin: 0px;
-    margin-top: 5px;
 }
 
 table, tr, td, th {
@@ -285,6 +295,7 @@ caption p {
 .panel-body {
     height: 100%;
     border: 1px solid #ddd;
+    background-color:#f9f9f9;
 }
 
 .product_description {
