--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom" style="background-image: url('{% static "img/News-Header-1b.jpg" %}'); background-size: 100% 100%;">
-    <div class="container">
+    <div class="container nav_container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
