--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,7 +6,7 @@
         <div class="row section_header">
             <div class="col-xs-12">
                 <a data-toggle="collapse" href="#register_collapse" role="button" aria-expanded="true" aria-controls="#register_collapse">
-                    <h3 class="pull-left section_title">First time customer?</h3>
+                    <h3 class="pull-left section_title">Need to Register?</h3>
                     <h3 class="pull-right section_title"><i class="fas fa-plus"></i></h3>
                 </a>
             </div>
