--- a/templates/base.html
+++ b/templates/base.html
@@ -58,15 +58,16 @@
         </div>
     </div>
     </nav>
+
+
     {% if messages %}
-    <div class="alert alert-success">
         <div class="messages">
             {% for message in messages %}
-            {{ message }}
+            <div class="alert {{ message.tags }}">{{ message }}</div>
             {% endfor %}
         </div>
-    </div>
     {% endif %}
+
     <div class="container main_container">
         {% block content %} {% endblock %}
     </div>
