--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -13,7 +13,12 @@ body {
 
 .main_container {
     margin-top: 0px;
-    min-height: calc(100vh - 140px);
+    min-height: calc(100vh - 150px);
+}
+
+.home_container {
+    margin-top: 0px;
+    min-height: calc(100vh - 130px);
 }
 
 h1, h2, h3, h4 {
@@ -108,7 +113,6 @@ nav {
 }
 
 footer {
-    padding-top: 20px;
     color: #A9A9A9;
     position: relative;
     bottom: 0px;
@@ -116,6 +120,7 @@ footer {
     text-align: center;
     vertical-align: middle;
     width: 100%;
+    height: 30px;
 }
 
 .LinkedInLink {
