Add border to report tables

--- a/samples/templates/viewreport.html
+++ b/samples/templates/viewreport.html
@@ -69,7 +69,7 @@
             <h4>Phospherous, P = {{ results.p }} mg/l</h4>
             <div class="container">
                 <div class="row">
-                    <table class="col-xs-12">
+                    <table class="col-xs-12 results_table">
                         <tr class="row">
                             <th class="col-xs-3">Your Result (mg/l)</th>
                             <th class="col-xs-3">Index Range (mg/l)</th>
@@ -131,7 +131,7 @@
             <h4>Potasium, K = {{ results.k }} mg/l</h4>
             <div class="container">
                 <div class="row">
-                    <table class="col-xs-12">
+                    <table class="col-xs-12 results_table">
                         <tr class="row">
                             <th>Your Result (mg/l)</th>
                             <th>Range (mg/l)</th>
@@ -193,7 +193,7 @@
             <h4>pH = {{ results.ph }}</h4>
             <div class="container">
                 <div class="row">
-                    <table class="col-xs-12">
+                    <table class="col-xs-12 results_table">
                         <tr class="row">
                             <th>Your Result</th>
                             <th>Range</th>
@@ -255,7 +255,7 @@
             <h4>Lime Reqirement pH = {{ results.lr_ph }}</h4>
             <div class="container">
                 <div class="row">
-                    <table class="col-xs-12">
+                    <table class="col-xs-12 results_table">
                         <tr class="row">
                             <th>Your Result</th>
                             <th>Range</th>
