--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom" style="background-image: url('{% static "img/News-Header-1b.jpg" %}'); background-size: 100% 100%;">
+    <nav class="navbar navbar-masthead navbar-default navbar-fixed-top navbar-custom" style="background-image: url('{% static "img/News-Header-1b.jpg" %}'); background-size: 100% 85px;">
     <div class="container nav_container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -30,8 +30,8 @@
             </a>
         </div>
         <div class="header_contact">
-            <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope"></i> eascatest@gmail.com    </a>
-            <a Target=”_blank” class="phone_link" href="tel:+353857863656"><i class="fas fa-phone"></i> +353 85 786 3656</a>
+            <a Target=”_blank” href="mailto:eascatest@gmail.com"> <i class="far fa-envelope contact_icon"></i> eascatest@gmail.com    </a>
+            <a Target=”_blank” class="phone_link" href="tel:+353857863656"><i class="fas fa-phone contact_icon"></i> +353 85 786 3656</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
