Spell check readme

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -360,6 +360,7 @@ caption p {
     margin-top: 30px;
 }
 
+/*----------------------------------------------------------------Cart Styling*/
 
 
 /*----------------------------------------------------------------Media Queries*/
