--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,20 +2,21 @@
 {% load bootstrap_tags %}
 {% block title %}Reset Password{% endblock %}
 {% block content %}
+<div class="row">
+    <form method="post" class="accountform">
+        <p>Please specify your email address to receive instructions for resetting it.</p>
+        <br>
+        <div class="form-group" style="display:none">
+            <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+        </div>
+        <!--{{ form | as_bootstrap }}-->
+        {{ form.email.errors }}
 
-<form method="post" class="accountform">
-    <p>Please specify your email address to receive instructions for resetting it.</p>
-    <br>
-    <div class="form-group" style="display:none">
-        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+        <p>
+            <label for="id_email" class="control-label required-field">E-mail address:</label>
+            {{ form.email }}
+            <input class="btn btn-primary" type="submit" value="Reset password" />
+        </p>
+    </form>
     </div>
-    <!--{{ form | as_bootstrap }}-->
-    {{ form.email.errors }}
-
-    <p>
-        <label for="id_email" class="control-label required-field">E-mail address:</label>
-        {{ form.email }}
-        <input class="btn btn-primary" type="submit" value="Reset password" />
-    </p>
-</form>
-{% endblock %}
+    {% endblock %}
