--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -148,13 +148,17 @@ border-radius: 9px;
 background-color: #c67605;
 }
 
-/*--------------------------------------------------------------Home Styling*/
+.active_menu {
+    border-bottom: solid;
+    border-bottom-color: #40ae49;
+}
 
+/*--------------------------------------------------------------Home Styling*/
 .home_bg {
-background-size: 1800px 100%;
-background-repeat: no-repeat;
-background-position: center top;
-background-attachment: fixed;
+    background-size: 1800px 100%;
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
 }
 
 .home_bg .navbar {
