--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>Developed by <a class="LinkedInLink" href="https://www.linkedin.com/in/danielcaseyengineer/" target="_blank"><i class="fab fa-linkedin"></i> Dan Casey</a></p>
+            <p>Developed by <a class="linked_in_link" href="https://www.linkedin.com/in/danielcaseyengineer/" target="_blank"><i class="fab fa-linkedin"></i> Dan Casey</a></p>
         </div>
     </footer>
 
