--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,17 +6,14 @@
     <form method="post" class="accountform">
         <p>Please specify your email address to receive instructions for resetting it.</p>
         <br>
-        <div class="form-group" style="display:none">
+        <div class="form-group">
+            <!--{{ form | as_bootstrap }}-->
             <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-        </div>
-        <!--{{ form | as_bootstrap }}-->
-        {{ form.email.errors }}
-
-        <p>
+            {{ form.email.errors }}
             <label for="id_email" class="control-label required-field">E-mail address:</label>
-            {{ form.email }}
+            <div class="email_input">{{ form.email }}</div>
             <input class="btn btn-primary" type="submit" value="Reset password" />
-        </p>
+        </div>
     </form>
     </div>
     {% endblock %}
