--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -5,5 +5,5 @@
 
 {% block content %}
 <p>Your password has been set.  You may go ahead and log in now.</p>
-<p><a href="{{ login_url }}">Log in</a></p>
+<a href="{{ login_url }}" class="btn btn-primary">Log in</a>
 {% endblock %}
