--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -12,25 +12,26 @@
     <div style="display:none">
         <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
     </div>
+
     <table>
         <!--{{ form | as_bootstrap }}-->
         <tr>
-            <td>
+            <td class="new_password_td">
                 {{ form.new_password1.errors }}
                 <label for="id_new_password1">New password:</label>
             </td>
-            <td>{{ form.new_password1 }}</td>
+            <td class="new_password_td">{{ form.new_password1 }}</td>
         </tr>
         <tr>
-            <td>
+            <td class="new_password_td">
                 {{ form.new_password2.errors }}
                 <label for="id_new_password2">Confirm password:</label>
             </td>
-            <td>{{ form.new_password2 }}</td>
+            <td class="new_password_td">{{ form.new_password2 }}</td>
         </tr>
         <tr>
-            <td></td>
-            <td><input class="btn btn-primary" type="submit" value="Change my password" /></td>
+            <td class="new_password_td"></td>
+            <td class="new_password_td"><input class="btn btn-primary" type="submit" value="Change my password" /></td>
         </tr>
     </table>
 </form>
