Reference classes not ids in custom.css

--- a/samples/templates/submitdetails.html
+++ b/samples/templates/submitdetails.html
@@ -55,7 +55,7 @@
 
                 </ol>
                 <p>For all options you can drag and drop the marker for more accurate positioning</p>
-                <input id="useDeviceLoc" class="btn btn-primary" type="button" value="Use Device Location" onclick="useCurrentPos();" />
+                <input id="useDeviceLoc" class="btn btn-primary use_location_btn" type="button" value="Use Device Location" onclick="useCurrentPos();" />
                 <div id="geo_error_msg"></div>
             </div>
             <div class="">
