--- a/samples/templates/viewreport.html
+++ b/samples/templates/viewreport.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-xs-12 col-md-6">
             <div class="mymap_wrapper">
-                <div id="mymap"></div>
+                <div id="mymap" class="my_map"></div>
             </div>
         </div>
     </div>
