Increase brand logo size in larger home screen

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand home_navbar_brand" href="/">
                 Easca <span class="logo_leaf"><i class="fas fa-leaf"></i></span><br />Environmental
             </a>
         </div>
