--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,6 +1,7 @@
 ﻿{% extends 'base.html' %}
 
 {% block content %}
+
 <h3>About</h3>
 <div class="row">
     <div class="col-xs-12">
@@ -27,15 +28,16 @@
             By adopting progressive digitization of our services, we offer the quickest most efficient means of getting you tests results and tracking your land nutrient levels.
         </p>
         <ul>
-            <li>Select and order the most appropriate testing for your needs from our comprehensive tests <a href="{% url 'products' %}" Target=”_blank”>services</a>.</li>
+            <li>Select and order the most appropriate testing for your needs from our comprehensive test <a href="{% url 'products' %}" Target=”_blank”>services</a>.</li>
             <li>The sample kit will we dispatched to you on the same day as you ordered.</li>
             <li>Each sample test ordered will be assigned a unique 'Sample Reference' so you can track the processing of the sample.</li>
             <li>By logging into <a href="{% url 'yourportal' %}" Target=”_blank”>'Your Portal'</a> you will see the status of your samples.</li>
             <li>Once you have received your sample kit, you can 'Submit Details' of the sample through <a href="{% url 'yourportal' %}" Target=”_blank”>'Your Portal'</a>.</li>
-            <li>After submitting the sample details online, you can return the sample to us using provided packaging.</li>
+            <li>After submitting the sample details online, you can return the sample to us in provided packaging.</li>
             <li>You will be informed via email when your results are available for viewing.</li>
             <li>You can view the sample results and details report through <a href="{% url 'yourportal' %}" Target=”_blank”>'Your Portal'</a>.</li>
         </ul>
     </div>
 </div>
+
 {% endblock %}
