--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -68,7 +68,7 @@
 </div>
     {% endif %}
 
-<div class="container home_container">
+<div class="container main_container">
     <div class="row">
         <div class="home_info col-sm-10 col-md-6 col-lg-5">
             <p class="home_quote">
