--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
         </div>
     {% endif %}
 
-    <div class="container main_container">
+    <div class="container main_container {% if title == 'About' %} about_container {% endif %}">
         {% block content %} {% endblock %}
     </div>
     <footer>
