--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -4,37 +4,57 @@
 
 {% block content %}
 
-    <div class="row row-flex cart_container">
-        {% for item in cart_items %}
-
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
-
-
-            <div class="caption">
-                <h3 class="product_name">{{ item.product.name }}</h3>
-                <p class="product_price">{{ item.product.price }}</p>
-                <p>
-
-                    <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="exampleInputAmount" class="sr-only">New Qty</label>
-                            <div class="input-group">
-                                <div class="input-group-addon">Qty</div>
-                                <input name="quantity" type="number" min="0" max="999" class="form-control">
-                                <div class="input-group-addon">{{item.quantity}}</div>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                    </form>
-                </p>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
+<div class="cart_container">
     <div class="row">
-        <p>Total</p>
-        <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-        <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+        <table class="cart_table col-xs-12 col-md-6 col-md-offset-3">
+            <thead>
+                <tr>
+                    <th>Service</th>
+                    <th>Unit Price</th>
+                    <th>Quantity</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in cart_items %}
+                <tr>
+                    <td>{{ item.product.name }}</td>
+                    <td>{{ item.product.price }}</td>
+                    <td>
+                        <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input name="quantity" type="number" min="0" max="999" class="cart_qty_input" value="{{ item.quantity }}">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary row_btn"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                        </form>
+                    </td>
+                    <td>
+                        {% widthratio item.quantity 1 item.product.price %}
+                    </td>
+                </tr>
+                {% endfor %}
+                <tr class="total_tr">
+                    <td></td>
+                    <td></td>
+                    <td class="cart_total">
+                        Total:
+                    </td>
+                    <td class="cart_total">
+                        <span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <div class="pull-right">
+                <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+            </div>
+            </div>
     </div>
+</div>
+
 {% endblock %}
