--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>Developed by <a class="linked_in_link" href="https://www.linkedin.com/in/danielcaseyengineer/" target="_blank"><i class="fab fa-linkedin"></i> Dan Casey</a></p>
+            <p>Developed by <a class="linked_in_link" href="http://www.dancasey.ie" target="_blank">DanCasey.ie</a></p>
         </div>
     </footer>
 
